# streamlit-apps

./: .gitignore  README.md  analysis.ipynb  buy_for_rent.ipynb  notebook.ipynb  pyproject.toml  streamlit.py  utils.py
apps/buy-for-rent/: streamlit.py
apps/buy-vs-rent/: streamlit.py
apps/calendar-analytics/: streamlit.py
buy-vs-rent/: streamlit.py
shared/: financial.py  googlelib.py
shared/tests/: test_financial.py
utils/: financial.py
utils/tests/: test_financial.py
