[tool.poetry]
name = "financial-analysis"
version = "0.1.0"
description = ""
authors = ["dcaribou <davidcereijo@live.com>"]
readme = "README.md"
packages = [{include = "financial_analysis"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
jupyter = "^1.0.0"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
numpy-financial = "^1.0.0"
streamlit = "^1.27.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
